Gpu FeatureFlags: disable chromium_image_xr30 on swiftshader

Disable Gpu FeatureInfo::FeatureFlags.chromium_image_xr30 on Swiftshader
because this doesn't support GL_BGRA(_EXT) for glImage2D(), making our
texture uploads fail.

Bug: 808172, swiftshader:95
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I0c6952b14ff53fb504bf292c51a8bc2ffe612918